compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
<!INCOMPATIBLE_MODIFIERS!>open<!> sealed class Base {

}